conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: '(' expected but identifier found.
if estFaceMur()==true{
   ^Conditions:6: error: illegal start of simple expression
	}
        ^